Add popup over time animation on projects

--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -30,3 +30,14 @@
     box-shadow: none;
   }
 }
+
+@keyframes scale {
+  from {
+    opacity: 0;
+    transform: scale3d(0.3, 0.3, 0.3);
+  }
+  to {
+    opacity: 1;
+    transform: scale3d(1, 1, 1);
+  }
+}
