--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -8,7 +8,7 @@
 
   &__top {
     background-size: 35%;
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     background-image: url("../images/circle-top-right.svg");
