update web site

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -39,7 +39,7 @@
     width: 7rem;
     height: 7rem;
     cursor: pointer;
-    background-color: #f8e72d;
+    background-color: #3178C6;
     transition: all 0.5s;
     transform-origin: left;
     position: relative;
@@ -78,7 +78,7 @@
       position: absolute;
       bottom: -0.5rem;
       right: 0;
-      color: #323330;
+      color: white;
       font-size: 3rem;
       font-weight: 400;
       margin-right: 0.5rem;
